--- a/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
@@ -18,53 +18,54 @@ spec:
   install:
     createNamespace: true
   values:
-    ingress:
-      enabled: true
-      ingressClassName: "traefik"
-      annotations:
-        cert-manager.io/cluster-issuer: "letsencrypt-production"
-        traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-      hosts:
-        - host: "loki.${SECRET_DOMAIN}"
-          paths:
-            - /
-      tls:
-        - secretName: "loki-tls"
-          hosts:
-            - "loki.${SECRET_DOMAIN}"
-    # extraArgs:
-    #   log.level: debug
-    config:
-      limits_config:
-        enforce_metric_name: false
-        reject_old_samples: true
-        reject_old_samples_max_age: 168h
-        ingestion_rate_mb: 16
-        ingestion_burst_size_mb: 24
-      storage_config:
-        aws:
-          bucketnames: loki
-          endpoint: "http://minio.kube-system.svc.cluster.local:9000"
-          access_key_id: "${SECRET_MINIO_USERNAME}"
-          secret_access_key: "${SECRET_MINIO_PASSWORD}"
-          s3forcepathstyle: true
-          insecure: true
-          region: us-east-1
-        boltdb_shipper:
-          active_index_directory: /data/loki/index
-          cache_location: /data/loki/index_cache
-          resync_interval: 5s
-          shared_store: s3
-      compactor:
-        retention_enabled: true
-      # ruler:
-      #   storage:
-      #     type: local
-      #     local:
-      #       directory: /rules
-      #   rule_path: /tmp/scratch
-      #   alertmanager_url: http://prometheus-alertmanager:9093
-      #   ring:
-      #     kvstore:
-      #       store: inmemory
-      #   enable_api: true
+    loki:
+      ingress:
+        enabled: true
+        ingressClassName: "traefik"
+        annotations:
+          cert-manager.io/cluster-issuer: "letsencrypt-production"
+          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+        hosts:
+          - host: "loki.${SECRET_DOMAIN}"
+            paths:
+              - /
+        tls:
+          - secretName: "loki-tls"
+            hosts:
+              - "loki.${SECRET_DOMAIN}"
+      # extraArgs:
+      #   log.level: debug
+      config:
+        limits_config:
+          enforce_metric_name: false
+          reject_old_samples: true
+          reject_old_samples_max_age: 168h
+          ingestion_rate_mb: 16
+          ingestion_burst_size_mb: 24
+        storage_config:
+          aws:
+            bucketnames: loki
+            endpoint: "http://minio.kube-system.svc.cluster.local:9000"
+            access_key_id: "${SECRET_MINIO_USERNAME}"
+            secret_access_key: "${SECRET_MINIO_PASSWORD}"
+            s3forcepathstyle: true
+            insecure: true
+            region: us-east-1
+          boltdb_shipper:
+            active_index_directory: /data/loki/index
+            cache_location: /data/loki/index_cache
+            resync_interval: 5s
+            shared_store: s3
+        compactor:
+          retention_enabled: true
+        # ruler:
+        #   storage:
+        #     type: local
+        #     local:
+        #       directory: /rules
+        #   rule_path: /tmp/scratch
+        #   alertmanager_url: http://prometheus-alertmanager:9093
+        #   ring:
+        #     kvstore:
+        #       store: inmemory
+        #   enable_api: true
