--- a/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
@@ -8,22 +8,22 @@ spec:
   interval: 5m
   chart:
     spec:
-      # renovate: registryUrl=https://grafana.github.io/helm-charts
       chart: loki
-      version: 4.4.2
+      version: 4.8.0
       sourceRef:
         kind: HelmRepository
         name: grafana
         namespace: flux-system
       interval: 5m
-  install:
-    createNamespace: true
   values:
+    image:
+      repository: ghcr.io/k8s-at-home/loki
     ingress:
       enabled: true
       annotations:
         kubernetes.io/ingress.class: "traefik"
         traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+        cert-manager.io/cluster-issuer: "letsencrypt-production"
       hosts:
         - host: "loki.${SECRET_DOMAIN}"
           paths:
@@ -31,16 +31,12 @@ spec:
       tls:
         - hosts:
             - "loki.${SECRET_DOMAIN}"
-          secretName: loki
+          secretName: "loki-${SECRET_DOMAIN/./-}-tls"
     serviceMonitor:
       enabled: true
+    persistence:
+      enabled: false
     config:
-      limits_config:
-        enforce_metric_name: false
-        reject_old_samples: true
-        reject_old_samples_max_age: 168h
-        ingestion_rate_mb: 16
-        ingestion_burst_size_mb: 24
       storage_config:
         aws:
           bucketnames: loki
@@ -54,8 +50,78 @@ spec:
           cache_location: /data/loki/index_cache
           resync_interval: 5s
           shared_store: s3
-      compactor:
-        retention_enabled: true
+      # Needed for Alerting: https://grafana.com/docs/loki/latest/alerting/
+      # This is just a simple example, for more details: https://grafana.com/docs/loki/latest/configuration/#ruler_config
+      # ruler:
+      #   storage:
+      #     type: local
+      #     local:
+      #       directory: /rules
+      #   rule_path: /tmp/scratch
+      #   alertmanager_url: http://prometheus-alertmanager:9093
+      #   ring:
+      #     kvstore:
+      #       store: inmemory
+      #   enable_api: true
+
+# ---
+# apiVersion: helm.toolkit.fluxcd.io/v2beta1
+# kind: HelmRelease
+# metadata:
+#   name: loki
+#   namespace: monitoring
+# spec:
+#   interval: 5m
+#   chart:
+#     spec:
+#       # renovate: registryUrl=https://grafana.github.io/helm-charts
+#       chart: loki
+#       version: 4.4.2
+#       sourceRef:
+#         kind: HelmRepository
+#         name: grafana
+#         namespace: flux-system
+#       interval: 5m
+#   install:
+#     createNamespace: true
+#   values:
+#     ingress:
+#       enabled: true
+#       annotations:
+#         kubernetes.io/ingress.class: "traefik"
+#         traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+#       hosts:
+#         - host: "loki.${SECRET_DOMAIN}"
+#           paths:
+#             - /
+#       tls:
+#         - hosts:
+#             - "loki.${SECRET_DOMAIN}"
+#           secretName: loki
+#     serviceMonitor:
+#       enabled: true
+#     config:
+#       limits_config:
+#         enforce_metric_name: false
+#         reject_old_samples: true
+#         reject_old_samples_max_age: 168h
+#         ingestion_rate_mb: 16
+#         ingestion_burst_size_mb: 24
+#       storage_config:
+#         aws:
+#           bucketnames: loki
+#           endpoint: "http://minio.kube-system.svc.cluster.local:9000"
+#           access_key_id: "${SECRET_MINIO_USERNAME}"
+#           secret_access_key: "${SECRET_MINIO_PASSWORD}"
+#           s3forcepathstyle: true
+#           insecure: true
+#         boltdb_shipper:
+#           active_index_directory: /data/loki/index
+#           cache_location: /data/loki/index_cache
+#           resync_interval: 5s
+#           shared_store: s3
+#       compactor:
+#         retention_enabled: true
 # ---
 # apiVersion: helm.toolkit.fluxcd.io/v2beta1
 # kind: HelmRelease
