--- a/ansible/inventory/kube/host_vars/k3s-01.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-01.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:nKbp5LuD,iv:DNX2U/yRt4xAd1fY2BUb8D+fMX31BmsFyz1abWwm3d0=,tag:jKhsNjLqc6HEL4HSj8siwQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:oJNy6FWg,iv:8MI71lx7KpJ2QboPoMiMZ7TIBLSeoMZhQPsL7AgVSek=,tag:veEmz4CzTUXQHjif4PWIJQ==,type:str]
+kind: ENC[AES256_GCM,data:4H4oCBxY,iv:VkjKg8FVkGn2ouBVsaU/63IEyZ+5Yx7MN5urHzTC7E4=,tag:woCz3kMZsnxHV38oymxHpQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:4v93deod,iv:/fyGpIwQ00yd4CSGd54sTQqbkpPLrwptjBZv0pFec4U=,tag:qN+DLw9iF0StVvpkF4Tuzw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwVFJGa29vcmRCeGVvcmE2
-            UzBUQjdTb0hsWDhCM0FQYkhnWEJLWGxEMDM0CkpmVlZpRm1ISWhxRGhYOUFxenpi
-            ek5mdkVPOFVkTy95V1NEaFpiNXZxdWsKLS0tIDRTSy9WengyMDBnQTFYNEwyd3VI
-            bjEyOUY0aTI2QkYvRFpFQm41Nmx0N0EKvNspsFfBp4WybVYzcEwS2ncCf7TuvbrK
-            vZMs2cd5mffb9xaoBtx5XozmbEzAbDdBom5PNOwTrbNdfQXzeYLFRQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwWmozTkNraHZjSDAyVmxJ
+            bDFzRkhmanl0SFZMSTJ1Yk1oeTFiMmFqZVgwCjdoQXplUG1zdmFmdkFKbUhvdktT
+            YjNuRXR5ZmhScnhTaHFJSEJXallTYmcKLS0tIDRtcG1ub3JCWnNBaTdsUjQ1bXdP
+            ZmY0S3JhVEJTVjRKYjVjL2hXTlJnSXMKowx1DR3BQNq3kIBwtN9Zll7o3FB8YQN5
+            ACKQSJ9teT80aufhMg+0j48WnwFhIEqZV0HEahKaz7zxDfh/JgRmZA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-05T21:22:54Z"
-    mac: ENC[AES256_GCM,data:Xt+ZB0WvZaRQTQUIKNSoaSP60cAdFfdm4ttoybMCgtq2nH+oRDOkvTVCi5sSzD060D+szxScUvlz40RI7FzAovJjRPitmPV5E5yB7nJoK9O83ajfzqccggZR3egiF4v2P9Oh6ecyYNc5rwzum5UjxGQ/S7n9nDJaif8ef9GBcDc=,iv:mSs6OrNZjqHBuhJMPKjYmoiiU+LZn+wFmdcWBjcHtL0=,tag:Ngmk18iIalOLMdRq4Z+bvA==,type:str]
+    lastmodified: "2023-03-05T23:12:33Z"
+    mac: ENC[AES256_GCM,data:tQiemAN5QHF8Kmygah6K6nxB0HP4ywq4C7J+4L7dvRoibC+Nogow0NSWyJB1giQqdyzfPj7BGX7Lx0wEjTxL3m+zOyqiHIfFQwz1lW37lptBaV2Q7lJn5X1E7+VPeRfaFZVtgIpeGa3WhM5ufXoHRMQTJqs4vzvIDtpXr9sP8cs=,iv:y4zAI+iOwKnLlb8NX+s5TSAV3tvcZV603aBwcG0OgAE=,tag:gz1Rx8b+NF6cwq3H5prJHQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
