--- a/ansible/inventory/kube/host_vars/k3s-02.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-02.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:OyNOmDLy,iv:wVsQP+HImrHPiLcmVdqd9tFS1qA/wRxvk2HcgbmqhyY=,tag:YIV7qfAVb3Kf442gb839kg==,type:str]
-ansible_user: ENC[AES256_GCM,data:29l9/4Fj,iv:3sJkGpeBs8kVuDhYYbz/uTN9SCSEUi0QBfTHPIrVnso=,tag:VjHMfwlAo4EwxWOBMtuckg==,type:str]
+kind: ENC[AES256_GCM,data:ohJD7jTg,iv:Bt51OynNxTMLaXHRov3bEXrvChtVEU7fSnklG4OCq08=,tag:RplCNDtmfFTPFeOdWO32og==,type:str]
+ansible_user: ENC[AES256_GCM,data:O+O2SAzA,iv:7C7gx5mHA4bMmqImZKOWR3VSHzwLT8M16jMjTajnSho=,tag:4+e/iweaNkUA9fo0b2RNtQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBOUthRE5yOTVhRkJ5dytN
-            V0VoalZKTWJrQTVsamIybnBIWElmTk5sSFY0CkVXVTlrdWxCbzVia3RRWndzWUx4
-            cEFUdnp1MTVrdzFXc2srYnA0MDFqN00KLS0tIE1RenFsdjZuL1RmbWhmY2lGdzlE
-            NXkwbndiK3J3MTJyTkV1SitLU3NnOWcKDbVUPimqY8p8gxpsbqqqd4sH1ZXTL+aW
-            DdUhYMwAE7759Xfw/I0IctLFYCdioThR/fnzJ5+QiuxF1KORfKck+w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBndEd3ZVQzc1N3cVF3b0Jj
+            Snpad1pwYVBGQTZYQ3ZsZlJ2RDVRVXFhL2lzCmc2R0JZYURNNDNCaVN0ZlR4ZkRU
+            NENNN1ZQMWhkUUg0N1NjVy9JSFEwSzgKLS0tIG9uS3YrNkN2cXFiTTQ2VzFzYVpO
+            N0ZFTUZ6bExPeGljYTl1QndodEt0NHcKrXwkjp9GzkRz7WsjBBU6eJ/aIs6cDAr5
+            MONqPqYTD0IwrcCnzubtEuRBwA0KLi6BXFpACYeV2xNJvzNAnvCYGA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-05T21:22:54Z"
-    mac: ENC[AES256_GCM,data:pGYcnkJP4mY4hBek49rqSYEBa9QpwaFuKT9CZLtX5t5CvFz5OgEPOL7Z8INlZvvcayRMZdv2nqoSYr9LffvTUi6aDjMwNpIMQoja2AtBAU8AOxy8P64g8GEGvfvTLfZD1A6oVjHslke5o5iZAu3hE7abfov51PlsFFqXPNb23kc=,iv:zJPusHndt4gdOjSxZS7VyPOovq1aCx+RcYXLftGflac=,tag:F4p0RzDS4QhFbGnxoX62rA==,type:str]
+    lastmodified: "2023-03-05T23:12:33Z"
+    mac: ENC[AES256_GCM,data:XAILX5Esy2Rv8+UH6hwfE0RbaJNvIdBIJSSb54oibiiIpiasMvuZGqw9uWtOtSPbMFEZy3ler6umlQ11xePkz3S21ehygPgHyNeCV1V8DW2Dyq2REeIev5c243otPCRtJLK7soWAAEiMZ/miKVqoY2ZEZvY4roMY4lJpauHp1Lo=,iv:hcMnafsmYEtASUXTbJDNqOdOuCROWTw7Nb1Q7mSWHUo=,tag:MeHNhjEhLlSOJfoB8S0NgQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
