--- a/ansible/inventory/kube/host_vars/k3s-03.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-03.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:lZthVLE0,iv:SVrApHzoBBz649FLEB7yxIULlHDV/dkkj9I4b9dqN/8=,tag:OiQZ3+rNTsjKwvuJ6ZbtZQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:6R92Ila1,iv:xE+Kk8Gc/kW1ypNEr4fGDxPLc/mK2AcPBdR0MysZ89c=,tag:mHmT5LX8WyRH/dIWi9VpXA==,type:str]
+kind: ENC[AES256_GCM,data:fLSnW/ns,iv:/+a7GBMHL3C69O8WE4SNHYsEvAXIWzJTpTUPUndPaiI=,tag:gwBUVYfO7B0f4YWBujHRIA==,type:str]
+ansible_user: ENC[AES256_GCM,data:lEhSY0j4,iv:Ia3FBvutjnviyQsNvbofhYvXy54P0/xInExnTrXUfog=,tag:lrF2UjaGoFx1nsWujFEynQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQQWpnQUwrT1d2elNkZWJC
-            SlRjWE1GVGYxMGtOUGtMbGQ1VXBpdG5DaEdFCjViTFJ1ZWUzR2t5bWQwRjRVbXMr
-            Z1B4dmpWV0psbloxcDBvSS8zWnJmdWsKLS0tIGY2bHF0N1JQL0ZKTWxwdmZoaDAr
-            clU0Ni9QSHJ2YWFSNTZRNWU0V1U0TWMKNo6znF35i/y6TttMHJnn6E4EywZ5OPir
-            xaqkPa7ZMFpuh00MLW+GzvKHc5XIXEgkhQmyVxnN2Nl8OwmLyJFWuA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2TVltcHFHYzA2cnUwTWpJ
+            ZEppYTJ6LzFGaFpXMVFOLzloT1RRMzV3RkFrCmNMa1hiTUptUDJQVUpWNWhsSlBi
+            QS82ekM2alpoYytPY0xwcnozK0V6STgKLS0tIEdVODR1aGRyRlZBYitGVE1rVElG
+            TTRuVnNjYU9ua2JZNUI1RCtkV3c2S00KTXNnU0xgOlbPHHF+jiG3HFHbgTztEWT2
+            HEeZjBUtEd5cTSNNWCHjgidubkKPcCYyfAKRk9zWeo7lVzFzgYmO9g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-05T21:22:54Z"
-    mac: ENC[AES256_GCM,data:bpyuaXIkDpVM4a38cNXJcgTfY3wnqdepeGYpfEU6EDnOgVctf+ppHOnJAYNJ21X3q1XPoY3oQi5oNxek/GW8Y8Z6QTzQ7Xkw6KeUvrDeQ/ip8LOK8wOX5DPlfNkFwK/kM5IIC+avQ6AKGnzOYTdoXRfQVHl4SzZVazGTLGnXFtY=,iv:CvbWgb5YQSHwDG3uuq+GxJLDupXKgLgVa4HPHUPyYuw=,tag:vOsMt4G5G8x9r/ar/RjV+Q==,type:str]
+    lastmodified: "2023-03-05T23:12:33Z"
+    mac: ENC[AES256_GCM,data:/it0ZpudirodMkUNhel8ZBnrLEwYGewbqimDkpIdOvL6zjYVKBheHs8S+1QAyYKoUQVjY2VfHo2Wbd6zrEZkB6kBLoZ6nIxFw1DWFHXVCqDp+AEaNHzkM5UWsNbBOJayQzrESXv6FOSh7rWz6hrKml7sue5LqpL+YormU5p6878=,iv:2JBUSuc3BpElgRdYePzcJ5uVxeRLb7lb0pN7o7+Cvo0=,tag:XaoNhH9fdgXbLquHAqi5qA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
