--- a/ansible/inventory/kube/host_vars/k3s-04.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-04.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:3UIE5tOH,iv:ehdHtPp7VUGftrufwYuu7NkeKd5nzptKAEmI8rzTErs=,tag:4GEgMcn4VQH8H4Xq+ayjSA==,type:str]
-ansible_user: ENC[AES256_GCM,data:O7IYF53h,iv:vWTGOrzJVqRuNYwFkDVmA2lR+HO2SKDQYfRNm+ed6CU=,tag:OdFqrqOhKcWPr2EkJAMTKg==,type:str]
+kind: ENC[AES256_GCM,data:1GOo1h03,iv:OwuoS6SKCfIIOKCNKaoX91hJuarh8FtyNQoECeXefeU=,tag:gPXWMniieihyx6+tRmB/+A==,type:str]
+ansible_user: ENC[AES256_GCM,data:X/b7WZkr,iv:9lSHuPfjg4L/1XhqermHt5TQnIcqJDaWAGfE1A40Hzc=,tag:CA7zHNz/l7y4Nxq+jDGvYg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAydWN5SW5lU05oZmJhNmVv
-            S1lNNkhXN2R3aU1iSFZDTnNaK1lOV0tIU1NJCnY1WTFGY3hocDNzQktNbGZiNW01
-            eEpnSXZSSFluVEJ3bkduVm1PbDY2K00KLS0tIHN2Z3lDM2U4NG1qRmpMMXNjOGxD
-            MGp5cGhFRmNWeEVyOGVXekZRVEJUWk0KpvcE5EbL8RjEpAnzJ5UMR/sG8TGQSwj7
-            u4+cILpK6XaO1xIFB1iiaAf+hoZon1rMkr4HdsJrdK3K2cB0tK54eQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2REZ5STc5dDZzVm5LUHRO
+            anpSbk5rZmJIZ2pTWVRLaHJFWi9RQmRKMUNzCmo1bFVleUF5WURjUlNNV2huaHF5
+            K2VjUnR1cjVabFdFODM4S0VrNm9iWjgKLS0tIDNKdEUvU1I3cWl5azZLNmhJNGU2
+            ZVplenc0cXJqRG41cVl4YnhyeVRWS0kKWI1FdLjqc1b3qK5mSCKlp+g72TRP9z+0
+            U2XYb8jWa1TGVGnxgfFEiuB8A1EuCcwfVL++mp9uVqyRUsfOdoBTBA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-05T21:22:54Z"
-    mac: ENC[AES256_GCM,data:OFlYrVNZ5RZNtSmIApTOwUjfkOIL/OJ+C+0eYZl/GPJbnwRvua9uxugXAWLcE0RBA3Tk0ZKdzRcZ47L7yO7cx/pob85kDORyUX8uqQugokFoTNHSNG1hCj4HJMQK1n96WM/tlorBdHLaFh8GpRmjqdoHh+ip53At41i9wwQ371g=,iv:4mi3ZAZ90gZccsnBjqpT5+rarvdjV10xJ0Zl2C1ioOw=,tag:WM69oNIm7JcoEWMUCwwHMw==,type:str]
+    lastmodified: "2023-03-05T23:12:33Z"
+    mac: ENC[AES256_GCM,data:MX0Kp0uJbyHPfRiJhACkoOTeGLIxtv4CyqBM3UFjN74dwW5sJZcPzN8TbPqAINhc61iDWuLZDWtiH24ndG4z1tPf/GEmrCdcL+N5qaVXTYmA2SWBWPDO8SWyHA6OMi1T9tzZrHnzk5raCixjz7LoqLD/ebsO00RmzYlhN8LJUVs=,iv:D792UAAxowIV/pXVXaeH5oucm2k33gWcVLd5dbHBbwU=,tag:AwM95JVWR1fZAfHlDOpIwA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
