--- a/ansible/inventory/kube/host_vars/k3s-06.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-06.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:zIRUFvXl,iv:jZt1IZUIUhy9fKiwGBHHl7PoT3PfI4r0idmy3hv63Qo=,tag:+Er0rafSIg42e/a2M4tHyQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:h2rdgnzo,iv:W0v1PwEeQyFFLxNMHfdZwL8Zr5ASdgJh1dZ+zN3xGkY=,tag:Cdgl90whmGReINjJdJKmmg==,type:str]
+kind: ENC[AES256_GCM,data:hhMW/jg6,iv:oNRqUwhRN3RfGiCaY8HRmEMsHWQ/WBaRm+vQ670njqI=,tag:aIVwH/AndC2GBjomJW2ONA==,type:str]
+ansible_user: ENC[AES256_GCM,data:tdQnXXMX,iv:CR4Bk3WhDXafYUtmuYGv8UEWb/LIRdL6Nwq8SNidGII=,tag:/+tYUej7Sw2hHDYMY6apyA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnSVJmZENEMDM5RjVyZURX
-            aFNsWHNtdjNVQ2dQWnRuK0srT2F3Z0szNWpNCkJoZ2cwemswUDNXMkxhQlQrQXVH
-            WFJudzdNNkFIUUdRaGMvUXFNcGRWS0EKLS0tIEFnV2oyZlo2MmRuYkVaVDA2RGxY
-            ZXM2QUNZbFVtVDZ5Z0RBdFNFeFhrbkkK2I7oTrDqus8hkkMQXLaTlIUDpNVihBCQ
-            LZnHg4e2fQcwLlSnKRyxf/dBQtBr2EkCxhQMC6uQisdl8pXGvWdrGw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4NnZzcFVZK3NzcCtFcVNU
+            MjA1aGFJbmxMR0RhdnBZT3Y3am4xU2h6NEJRCnNjRm5zQzNDVVZQRFR0VzZ5WG4r
+            Yy9nY1EzUHZwNmlTZFBCei9RSHIxM2MKLS0tIFdqdkM4L1p3MFJOOXhyaWZpaFly
+            SjNoZTJ1d29QOUM3VnlQNExYSU1ETzgKCiew1Ov3MvNLs+PcljFFiFsZg+BqCE/P
+            sTCCQPSyDVu4zpeESsk+NQtBJ7laFM7R0ss8kWH9RDGp8lfFQ8WG4w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-05T21:22:54Z"
-    mac: ENC[AES256_GCM,data:fIp+phyE7fP0SjKFu8uOHC0wWdM6x3XEAMiQgC1ZEB5FC1MDV49zUAco5TM1Nn2hKFQ1etVTGSU4GePh5wbXUh1haytkVcgD7Ls0idf7e/h5y7Kwf5UlX0we+cKc1r9hCIK2hO/x3/ZHup82gv8N5LXLismPMp8o8BOIsq20jiA=,iv:JqVtdETcdsjuEZS6y+AxBwn6ujaTSVvnx+do/A3dN1U=,tag:Qg830VEQLCcPvrMx7yf48A==,type:str]
+    lastmodified: "2023-03-05T23:12:33Z"
+    mac: ENC[AES256_GCM,data:J9xiZIVRVYIy1YsOIKBU6wkHqBUD0mT7MQByTc6GQAgGQh0TDKYELy2ogrxHvUWVpHW8JQ8+T5N8/WB5QFhCteSHrCv1Rf2Ve8K6/qguOmO4ba1jGFrmDhewBFbv9SqjQxDRLcASDyp7sPOJHbdRfZ5jQOhMuWElaEESxzg0CPM=,iv:ENOi2KAP5e9Qxi0xkBeHTu8gxIo0fy9SQtl/G2FOF4A=,tag:SYrIdHCodStrJ3XY8RXMnQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
