--- a/ansible/inventory/kube/host_vars/k3s-07.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-07.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:ERYWQGvv,iv:cfDdTkbw6DhOrxhRTIfVcuC8DmClDArWRLLmqXDHGP4=,tag:Ot4yDjOc9MeFGEGJUeIyaw==,type:str]
-ansible_user: ENC[AES256_GCM,data:regYlgKY,iv:e6LRSZuULQCjuztGsqpxZgt31qKQBmd1zMes25Jhyak=,tag:weGAXCFEKc+Pcj8wDo5izg==,type:str]
+kind: ENC[AES256_GCM,data:nF8vjAhb,iv:QxP6nDBzb1Rtc7opJxeZBo9B0CL7xt9FxJ7NHpk3kvw=,tag:6B5Q8JGWFa1Y3l8sT3LVVA==,type:str]
+ansible_user: ENC[AES256_GCM,data:AxDtt35P,iv:HmjegxGQ9nMuWY/FXUh1cf0dMZQtku3oXJ/UicIs3dE=,tag:edZge9Ey/szYN9gy4wHV2A==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHTm04S1pjNnBiVFJkQzBT
-            Nk1KVHlqR2FDakliTE01Ykx1dy9lbktKYkdFCm9pV0NkNGYrM2hEUnlQc1RjcC80
-            SnBLNzMyYUZmSU9LcmhwbXdGWERkL0EKLS0tIHk2UG16UEExTVRoa2dUV21OenpR
-            ek5aRTVpQkhZTGJycVFPOEhCUXNPMzAK4TeYviINF7Az4YFbzxq3xRQCCMkOU0gb
-            Q7J86bquj/IECp6t0PjWupIDqbd+6hhmuu4UX9EvAaXdufr7lUaJmw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3RWdYRjJWWkc0aHc1dzBj
+            c2pTWW5UNVFhOEtidnlwNFNJQmJVcHU1MlFBCmN0L3VneklVeVZZOXRScjZZOWww
+            cVhRdVk0bWI3RDROamEyUEU5UWNRTzgKLS0tIDYyYXQrK09JektZVzFNQkNlcDMx
+            MmhMOG53K2hrY3RnYjZEZ1d4Q1NHSEEKz4kozdgz8bI2CJkFQPkBGNfDqAjd75zV
+            TKGprWTUwRKC66o/16cAk+GifsHKjKzSntcCyjfz2BHubg/mXM7i0A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-05T21:22:54Z"
-    mac: ENC[AES256_GCM,data:JaT4BhLbrT/8696ZOf81SA+Bu8rmxdjLO1Ay0K64XV/1/L7LhMfAvlJvzeSjgBBElaQpo026pmdKj53Cc0yqnXp5+R+56d7VtMpVY8ngxr8hXlahQ/+kYh//KpzZxkBSvNnA1XGpKq3TFaty2gf0pEb6YsEG7S5ZAfuU+OWP0n8=,iv:yiDpiMCbaYNQIXikhnT14XzyQcfMpR8j8ha+7FL830E=,tag:cKsLSh8UWsogQoDVPPfJaQ==,type:str]
+    lastmodified: "2023-03-05T23:12:33Z"
+    mac: ENC[AES256_GCM,data:Zr87QFWN7olVxhfGgi8GjEN9uPHNm1bvpEJvvMFlGJJnOGH2kGkEX6kY2D/SzqolSAJa9L+6tBZ6eI8zlKGuWTcRVLPPw769ZqWcHjmGeCWJziEem5Q9d5dpuTKK9hrfa6kL2iHPgkTUtWbvGgToc+dLuzgMcqrZXN6c/oKmkbQ=,iv:oBf6aOF8CTcvChGc/QC1+I8u+yRks3p7207LEKiMYKY=,tag:aPGsL+9pit8mPASfUQH5WQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
