--- a/ansible/inventory/kube/host_vars/k3s-08.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-08.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:4l7pJEMq,iv:tN5KZtppIbeEaofU5/NQmt6Sa/4hVa+GAEVegDca/2E=,tag:iKofHV0/onlnCkDCOMLphg==,type:str]
-ansible_user: ENC[AES256_GCM,data:wUchXJC0,iv:1Z5gsoCv48V/kSAYTE4ZpPvpbGS+lcZna/ovbaL7H28=,tag:Lc8q9QKMaO0RaWaj9aKK2w==,type:str]
+kind: ENC[AES256_GCM,data:YD+wfXQc,iv:kl53tmtQwHI5/42XBpLWLbMgjGm42pGfKvUm9yFaLlM=,tag:WbqBe8DjtVp+5sPiddcNbQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:FnQryL/h,iv:rDfYEiqkBSWddDeu/NqNyj8f4qw/Jdobe64h45zVrDU=,tag:sx/SReT04DwKhrVPYpy4HQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCRU9FS2wrN0pTS1RFNzVP
-            L2NoWFhNVThtNXJwaTFqWHRvM2ZyMFNqaFFRCm93L0plK1ZQbjZ1SmE2RTdqK0RJ
-            bXg4REd1NDY3VDRHTklkY2NHd1FwVFUKLS0tIGhPNlhGbWRnNW5TSFBRYmprdkd3
-            Y3RGR0dYSW9SZEsxZWdWdlV0T1dGQlUKxBvaYJs3TtJs2bpGdW4Fw56KTKnXygLs
-            rzVoAC0/wCl1hdmR/X8QN4fjYnQJnm2zfDsOEFCDTQaEq5xRsFg1Ng==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRRFhSK0hCcWRFcEJ0V0VB
+            cExDNzd0Z3Ard3ZmRkh5M3pnOE1lb093dVZrCjlYWGpUclNpUVZrODllWDR1azA1
+            aGpDYWRvdTFMUVU4NStJVVZwQm9xZEEKLS0tIFV0ZTlpV2JrbU1QNlI0c0orM0h3
+            Tmc5ajVUMVlBUk1SU0paUnNqU0xPRjgKtcQgf/+LzHjWvSY2yGKiF1Wc/RtxEWxB
+            Bg9mMpOWqW4WhNGiSajbrha4BI6C2UpaaaKbXHIwtIf35jq0mmyTGA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-05T21:22:54Z"
-    mac: ENC[AES256_GCM,data:2gLBDTCvc6iT5SmPe/2gOvyLBOXQMyvZvV/a/5PUr6kfJ+8NuNGYyChy2pUCVEoE70PMrT+D98G7J70McJEQypW9HpyCarIh5yPwp4if04Pg37nWr0cqRE+/ZzxXkMbmSs6Ci3K4Zpep0FlXrsLoHKlx8Zzpo27AaGcDleO8duM=,iv:QtumX4Rwfm3aYgCWyWInL7aot8+7e6yQNo/aYCu6JWI=,tag:Kh5YcKU2C0iNaBdHSeHamg==,type:str]
+    lastmodified: "2023-03-05T23:12:33Z"
+    mac: ENC[AES256_GCM,data:FZ36/pwVmb29bZ8ejCJb/0CxujZSSHq4yXOWO4JEerSW0EEjLj2wSHkQaRWddw0srfO1QkGgfyBoQq6RDnJel1lwDIe4HR3elkqVJ1vExIts363Wwj6QAF8pmBBBwRlfsTbwolwaxeVVf60VFWtfH/t8o49AIee2asGprCXqiaE=,iv:KaRvXKq1Q3jL8D+qekg8DrNq40CWV8HLxLb6dGETla0=,tag:tlpD7Mpy6ADSSGcttQqYkQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
