--- a/ansible/inventory/kube/host_vars/k3s-09.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-09.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:62HPtDkt,iv:D66raRTSbpa13i31uP/QWxcc48Um2/0fHw1u54BiXCk=,tag:TTuJmj6O+y/3sA5RGzwn9Q==,type:str]
-ansible_user: ENC[AES256_GCM,data:pglur+d+,iv:hpjvEmS2nr+g02mhrTEzlNxZmR4/PRTRf7ZQ/JPp9x0=,tag:2gdO2s2gsYur+1dbkWtsmw==,type:str]
+kind: ENC[AES256_GCM,data:dZLm1oR/,iv:DNd4mgZMgdhQkLidk/hN3IkqvbKG6Q3JCEW9Ch1xit8=,tag:/gLZtHBIhYtiVp3Xqecqbw==,type:str]
+ansible_user: ENC[AES256_GCM,data:Rtpt2vzk,iv:RS8HgvqR56GcoVDZP9WOMDDu2h+RHWpReMPqBh1Pzyw=,tag:Bwl+LgMNzGxBjHZu1TJjCQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2OUdTVTA0cjhpaU9hQWx3
-            aEVYdW90Sm9GNmI0bXppM3NpL2ZxTkJaenlFCjVHcGMrVmthNFV2aDB5dDR5YUVF
-            KzBoT2FlbGJLeEJReVQycDB0Zm9RVk0KLS0tIEJxYzdPUG9TV0YvNlBKTXl3L1Mr
-            QnlueFBVRVdOSFlBZzA4K1A1bVF0TzQK7EgQv3G0GoKRQgUACkBn8i0HQu0zoQXv
-            joSScMlJDGl37c9AxbkS/Y2ijifYSQC3mfIQBaIy7QC2zeY1ndR2AQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvSitYcWU4eTl0QjU4NVRt
+            VGhsMXYwQ1I4c09pcithRE1kYzBjMXUycUVNCkFUVDBFdnFFc1dPVFYyKzJxSzJJ
+            bkdKMWczbmJKeXoxdHhSUkU0eitpdlUKLS0tIGZxNTRySGVSQXdRYnN0VmZkM2FL
+            WGdLb3VVYytjZHpZSk5EQmp5ZHlGMVEKaZXF9iN+97rlIDdudaOwkiaVpoABVBVz
+            yyG0F3z37ji5/z7TncaIs/2Vy0deLpDzPpMhTW3J37WxvZmjYbUimg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-05T21:22:54Z"
-    mac: ENC[AES256_GCM,data:EEAtRRwyjnCfAWdsapusMsQwpUcSJ9KRJQB5yBsHCbNPbZGZLuQc8Jn0K3GJCBYY4i8NDIAHiWz2LLVYUm6XLX67cr6tA/L2MwSRc0f140amef8fqKZHSkRlIJhfKBdPnFxNaxZz56LRLCoLg4LL5xP2mf+NaksiKy8q+12gzQM=,iv:mr3ELnXj299K5GQ5UKZLVoVZCdiAlju+PrrfuKmvmLc=,tag:Fz8tPPMVxx2NwQJQ9nqa0A==,type:str]
+    lastmodified: "2023-03-05T23:12:33Z"
+    mac: ENC[AES256_GCM,data:q4AZ8tmY+5a06kpzPLwxoIQzCxn2pyi5ifQtGFPdBQifMyn6gkGIaG+1F3n7QGFtGmW2cXR7Shiwh7cwTxxYsnkHRUxX/kD2JbNbhVpXUIDGJ050bCoWqWIo4tm3O26Bvmx9IM68kUzIRm9s0e4haZsmHt2vl7IkbJy0Q33aHJo=,iv:P/iIhn2tTa786yOsoaCcm1xd82UWFWaoiIqXh+i2Tj0=,tag:eII+L2JcEroqYzTjP+63gA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
