--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:2CJMvUkTHAuBIJPymlddtbuFWPWp,iv:ZIrrggzlQwt8LL5IwdOEj/tqdsceDcnZQkshWByL7h8=,tag:f6j4oL40CuasoaLJj+MOkg==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:tH4bC2SQGaC3o0XVQb6D/99eEPh61nhTTZgrkfXOs4n/OnKYbQ==,iv:sh0143jptAD8e5qeF5NZSGwLshv8GhT1b91CP6ux+ys=,tag:usePBxOEe9z3Zb0ikZ9IQw==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:fNuBviZ0YwLK0u0=,iv:rxqNRoGON/sfYxkOt79RtLgZtyiaGrEG9L1omy+PWeo=,tag:KNPqJhjm2aEHV1pT/daiyQ==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:Lneq7qtbbOi8oCKHgtKIIZxDplFj,iv:FbM7CJuH3wBMwMgGC26QTodk5q0B1pzaqUki/s6Z4Fk=,tag:7KjC4DpLYeiuASDlQtdQcw==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:HPHE7zODlk8jEIzl5cmTzV6j5CxiWkYC13Z6uGhaeThGkoqAOw==,iv:8+S3vw3x4L/WWfDuR78OKRqh3j15srOoC88UzItrFtU=,tag:QSUQ/uPgCLvoWX816cTNfQ==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:k4yH3eniFs3oL40=,iv:deQhvVSydCJ1yIz4zLYizjsAfmriHSda+LWfghq1eEc=,tag:BZH3xXXmw3gH0kZOHon/HA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKTmFSZUw1RGhSak9DUDM3
-            dFhwUUFqUmdESEtLaVhIbjR4Y2FmbmlTeW04Cll0R0w2d29IYmlDTkE5OHA4ZkZx
-            K3NJTG1mRTQwN3kzb3p6aU9yZkJBdncKLS0tIEFYQUFpOHhqZ0ZKWk9RU3FnUmND
-            dllCTHVkanFncGVyWXNUTnN1RGU4TlEKQPgTKReZRzbzP3Sh8SbNIcb6hxlbvZX+
-            qJ1vJsWW3ZS09aGIt2acRQrDHoKBeB9MbYS6UH3Fjt/QK9Mk2ph1Jw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzVEdLa0E5Q1V6T0d6RlZj
+            eFByOHlTenl3NHRyMm5kcllWSHJNYW5kbVhvCkwwZmlobGZrNlRGM245bVhGMDZ5
+            TC9uVi9lYW80QWRsYS9ZRWtoZDR1eDQKLS0tIHNRVVhrODZqRjR2OFgzUnFCVStB
+            L0V0bDJDamZCeTVHRldNS1FhZWNRMTQK2KLzDl8R78rM4sKKSCIv7jCcLR0Vj3VS
+            nLaI9ElHfT3QolTdjY5MDgBf9aru5jZuaGvJLsJ1N4YisN7o7+Xr5g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-05T21:22:54Z"
-    mac: ENC[AES256_GCM,data:wN5ucfU0vVH1R/dPr8PbGmLSv4fn3+MoDpHAxJHoEbzMCa+RMy1M1Ja1l0KGnPafNpy2UxehnUg6ChtTSCTfeW9CsmlnZ5s/SthycFP47k/G9oalUVwnCtwfR7VIqrTKWUDNVHcInjSE0y9SG+t59nnIAjKDUKM7zpOU7AhQDrE=,iv:3hmhy/PpnQRn4+7rjaVRG43ZLPGMWaTIKV5IfOhsaVM=,tag:3cWWQiNt/rUwD+ETVeQZog==,type:str]
+    lastmodified: "2023-03-05T23:12:33Z"
+    mac: ENC[AES256_GCM,data:PmBRJbQKYMzEiCgBqjbKH1702pcUt2iYZzj8XDW8frmGFTdkCjBxWvDcMYZrHgE7+epzpv/e7bGv+TRoGQkWVm6MnO1E9RkRefCX4SWvNH2Ghk86+al4twIuLuAtWkZDPmxyUhrCUYJpIxfs7VWTx6BNP0FF5iByjTRtZN5N33s=,iv:b7iIONQUckxtZlvN5mBi+9XXdOynFN4Pj3WmMXJD6ZI=,tag:TvyUhQqKNNAze14v0SSyyg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
