--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,34 +4,34 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:qodPaQXlyVL6q54=,iv:OnoAAT4jF/BNuilGwSwgbYwTLWg7z9Bbsm/dn3/OBqE=,tag:s3EPK5JfLpB59e6ANl5FOw==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:gf61+SeADDkRqZk2sDc90EKqtmh3,iv:n9oT5cUx8iZl09Aejtzy31sKXsIWanCyaO4v/1LgtZc=,tag:DVmMMQBwl8Vdey/8C8RczQ==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:sKl5i18kW8SZ3GLm7L0YaX0wbRa1TdtZrKEWx0BCeCK/WUEjrQ+CCCGGCXCHcq5JoY3bXioHm1Esh0sK+8b6veEtwYAtYGE=,iv:SDYnSgSAmKJjbL7dUEE3FyfdsTq14KscjtamyC6QiZ4=,tag:8/kWFCEj1CPbgBqcJacoGg==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:34OqE8vmO0V1Qv+AS12CVSQ0FwqBRVXWdTyLDj4bqCMLcFk=,iv:T2blczuRccB6qu3GRKSeS6A1VYI0fockBdl17x8hUVY=,tag:zpWi6vAsqGE23xo7X/5jGw==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:ug5yxZciQRr4OCdJjTuX44n0SA==,iv:eXFMuH836kJigpDOtmH2EkLJzSrL+W52G/vq3wRcqH8=,tag:75KZ8eKy63bd0gqDzMHiSw==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:ziW4J4nKcD2f4zYnW7vO+iZ1hHPc,iv:BEQLNBjceqeYwjGuy2hyO65k1sj4KTV0bjNgQEWxWwU=,tag:dfLB+JGJLSXg/X2KbtDn9Q==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:jfbahgCrXmk=,iv:r2A6BDA/ZCNXFmRJUAxvPsDD5TzpIfu73qfyWHTmC1M=,tag:omM30yeYSrdySg4nqqhggA==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:PQd3ARlQKwM=,iv:Q2IGpjWoTQd8wKjO+vhOF98OokP0m2meQpikDDGzmZ8=,tag:5GepOBQ5gycsZp4WKxWy4A==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:b2SgJ16S71VHhJ6Jtetr5boVF/QE9Vp0hHrv34JV347ZetesGHg4E83MjlGbt+BS8lfC76sLgW3i2oX7yycw5A==,iv:uJIOaYzlb3ZxKTg1H2jgoJ3/emmJ8GFski4kl68vwH8=,tag:EkkcjyF62t+XwhWnfhPNWQ==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:75oVOqMKCCGcVkisaiTwZRJt6QokNaE3GVmsOsysOKN2FUhlhjlBZ3MRQySJ91W7ZXn02COqA5oF2HnO+MlgUQ==,iv:u0kj4tW9Qp9yRF0DJKAT0q7rdVPsqERlIO3PiBr/Fe4=,tag:roPq4c3gl51GsJXXHYhwPQ==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:DGFY7Ug81hAY,iv:iAFURbW6is4gC4v2Y4v1CW9PneNSBFgymbZGHE/JS+4=,tag:QJP4x2UAOgJ6XJgiH/THzw==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:Rl25Xyienr5DXvVdcICR,iv:MqmElQeLAZjBIL149TSip55fVkPH+9qCgsf0gFlmuVA=,tag:Pr6ilXpeDdDwyQ9lQwqZeg==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:HGMxK8uLl0Mbu+VJUfju0bnNmfTs78uIN2wMpAKWA9AKVdyt00bzC0I9t9IlerpoPqY=,iv:hmcSOS/gAv9Gad6d8QSueyDwtHlBMRP/qhsHDOeqTAE=,tag:QJ8qPK46wJNXm0s3bbXNiA==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:0BFuuLO332/Vhw+QReY=,iv:1KyPduwL+VxEsK50pith3Z6KtnWfl6PSN0XhtkdMrOA=,tag:HlvHAd/rsJQdwPBWCCLY1A==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:jQHnmTbijzPLCHPcRtMjb1iPHk8=,iv:WK7HIOaH5BhxW1B6/M6GeBtiX83fYAYpDuDJTQNZD6M=,tag:KLFmqhN4QsmyN73xn881/g==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:ze57eEnLreI=,iv:ikMpQyCTKSQCH2h0O50OnPEfH0Edbg3yDz7LFyOK2DY=,tag:w7vMZ/ssMaKUk/YfrKyZvw==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:wq5Pwff3Hx0XJBzVzgkR1NBHZSmoU3rK068jvTYE1exV8FjodQ==,iv:WghShNjfcBgxe91tZVZdZrYc8PK/bMPuUmdkcxluG0A=,tag:XYqj2LcsEYcuM5L2XJXQzg==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:7Ku7gRppppR5,iv:DWKpXl60oZ2ORHm9SZLCMiEYSSMwvNgqvNbSLuq4ik8=,tag:PuVtznjZ9u2Vtyprtk4KWw==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:nwi5h82i5MZQ,iv:c08yKDaTyG1gPVksxo5UoQdB357KwTg2eJQsKcl9wJU=,tag:ntwlO59KueehuYh6youokQ==,type:str]
-    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:mo8iAK2BWg==,iv:MTsXR2fZAGTLh2VDEDQs08+1ZTeToElflGOZuvh9aDo=,tag:t4HtEc3xgWn0KI58XUt7Rw==,type:str]
-    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:2kjc5ccTk3W+,iv:HnbAy4ciVXsGTdJLpMbVlMu6+Tg9Do35ZCAnAw6rhAw=,tag:5WrBajltMdz294Yaok24IA==,type:str]
-    SECRET_GF_SMTP_HOST: ENC[AES256_GCM,data:1GyAK3CWdPGrMPmiW8/JAXBb,iv:3TmFGugBUWxBHre/02Eb/n1HOq+CyUOt5p27iiwgU18=,tag:Um0DuF8jC3f3Q7IlSH5fdg==,type:str]
-    SECRET_GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:Ie/KVbIYWAjEGd1KbJRiieplRw==,iv:9HMbvO9lqcJK5U6ZWmC3gSBQTEAwrrpnCVD71vTgxZI=,tag:yPfsQAHmwIw2PLNUKjeFig==,type:str]
-    SECRET_GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:Q0xKmpnZfVc=,iv:dN9LQZCLFMUWNlSlrtnzc6b3rOkDw+NN7NRhkZljnjk=,tag:5LfmbG+SL2SrjTR/QX8ooA==,type:str]
-    SECRET_GF_SMTP_USER: ENC[AES256_GCM,data:eFEf4KQCSo601jJDFYX6xjkzpA==,iv:S7/GET0v+xoVM4Y0id0SNDzTh4DJWjwJtzwB/wc0PEM=,tag:gsopm8OEQdNh8HEjPDBw0Q==,type:str]
-    SECRET_GF_SMTP_PASSWORD: ENC[AES256_GCM,data:aL/YDZVjyVsI,iv:LeCiG77mVEVI53MQSiwVlSP1HTPmnk1wQDA+0SgR/Ls=,tag:tmL4trmRtwnjqFqFO/vM0g==,type:str]
-    SECRET_MINIO_USERNAME: ENC[AES256_GCM,data:/gathi4DTta1+Q==,iv:WmtE5ljZHyM/Hqznk6DwYECQTaebQuMjNaGNYUOilWk=,tag:FAxXH3UpSLW6fPxuucWg5g==,type:str]
-    SECRET_MINIO_PASSWORD: ENC[AES256_GCM,data:groTPRdzBroEQg==,iv:nepWzehMFpcMW7w3JtMH95EmHR5ZzXD9tCsV+MUPoaQ=,tag:mgFuGhpNY8dIX6Yz2OP9uw==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:o3F2a77vyL9JN3M=,iv:Myc6LahnTDk4NbaHdaw3lX41jHPuL9lde5nooMmPG60=,tag:QOweBsh8QjgmNg+udkoA2Q==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:NdHbc9PaWqt+K/HCD2tiECpl8IYq,iv:ZFLiIvXa9rm32B8Ge5UAhwl4+eOZNjRsVARb2KQI+H0=,tag:DnhR/ge/UmRviYPDVNgQyw==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:HrOVLZaTHWElHCJKEzjz5HfmZsN8fCqTPw2cho2YzTCOCRW3jSIbfHvX71j+JrBvndRTiJkUdSKUUaIXJFid1n3YpZWZGo8=,iv:ycOfQb/4cKBgXt5XtC57pZfEu750cO8VWFoxsgqlh0I=,tag:/RtCKsSHuBnuZmvObpyFhA==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:zI2AMJtzbUp5RZu81DzMCGyQ2+kmdY4qfLiZYByV7qLcUnc=,iv:E43NJViqHKS65lDU/+jnaEGe+AwrsV9NHwQrO6SpBE4=,tag:h7VpCrd/9uaFRcCV2f5UiA==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:0K7Gxzq8nU9LxRm/LHI729PEBQ==,iv:SgOudCIdtHf5VrK+EucGuLW5TYs01Bu7QJr8KONq2qw=,tag:F0VymXmtp/hDLeBdRB3GVA==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:Ik584Nd031+QGWPwuOkmrlM1CL4A,iv:4VkrlOXbdizVy2VnCKwuGMXTNxsjFV0Hb11r/ZqMEcc=,tag:lJEv+6sEZPokVWR14dXbLg==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:1GcKUFwFlr4=,iv:ddGEA0c3EFwAg83CRvQIS/EE17md93uSISXkrIhTX+I=,tag:GWK8UjqrRKGs+16Olwvbrg==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:d5L8gplpOrU=,iv:wIhDbo2jbrzzh+Y0lW+w+UhEfgHHv7d+if6tE85cuGE=,tag:sylrsoV4nTm/Z5uHguGiOg==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:4ni2mzYmyBIaeJMFP2bxxScJq5ijVzFFKmSWfB8rfJch8XALIdZG/T+POPlXufIrBINP35n+z7/hYFrKrXXgAA==,iv:WDoDJYikRshRw5PfADSXfe5fxfh8sOMXG/jjoo2utvk=,tag:209gZ+AjCTCDcP5Z799BjA==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:gYNrTTHO4Xe8t2M9zx5rn2399nNKWXJwFfd+zo6zjIJozb5onEEsr7oye0r0p/vI8KaPZk6kWHN59uZHy11Q+g==,iv:lJlYmLS/1M2ouAv34znqBHVzsbahF1sOiR9urenv9As=,tag:qZwCR8IgbW/fAYQ7cbF/eQ==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:pNj3uXLG7TV3,iv:glyjIb6Hxu40d6pjTZoK+79swOxMKeNIbaCeyxvGXEU=,tag:ibO1bw7R3xRWw58kjGWtqQ==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:t6kW+Ls0oMYN7eRBQImY,iv:MTGtg3PEWd8ieqYXFd9uS1c3wUUONxWiOWs3uPylBtg=,tag:d9WVIxB3WhrZpSfgSqs4Gw==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:i0dK+8kVAPsmtMoLx38DlwMqY8flgGyfrXIiyVN2+ZyQl0WHoGeK3S1MjHdTBbsp+lM=,iv:Vcrb1dmScQiUSU96uefoErFtfoXomf/pDddHZX0Gn3s=,tag:6DV6RvtjIYmbdzB7Kqk9JQ==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:C6LLgi8mIjRzgx/VkQ0=,iv:AENO+BMGBoPjpbdg7KkIVxClUMbM+uOIe0nuzpr8gIs=,tag:8zBEEGLEJ9zpXP/xFTA84A==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:wPEfpqEVGR5Bz0oIqwR7CUZlnyI=,iv:c6Hs++Tz7CFUQ3XcxHFKFYiRpdR6rv9HOwgzTsEnzQ8=,tag:jPl75bwEkqqu5dAoDGFu4Q==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:PC4anKENMcA=,iv:0m6SplFPhxRHSPOSP35gxEcnOuo50IoztYX1tw6Hihc=,tag:FfQPeFqOToK94fXSTKMnCQ==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:jq6QJd4za9Y7rFnCrbJXpjFe252RwryrLX2gSPsJU1x1YrGaFA==,iv:CunM7TkpMfrQF70hSfnDRs2DZxqRjKuSvuCfh54VDgE=,tag:kXVOXvCfJDeob6g78itx/w==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:NgZ4K8VX0PMS,iv:QqRHgTY7LjXQWcasF6C5xIi0El2x33ZJGmHUuOnpvlI=,tag:2XngaTLWlXpCDsz1PJBNUw==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:EhkE3khlzUhd,iv:jNnYJiyfsT8iJct2Z3SFK/jSzKAv7j7MRWGT09WunoM=,tag:b0MRAzyuHEyAWafpXPjY2A==,type:str]
+    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:J8B7DjwxUA==,iv:eBuBiOpFcwa6q7Dq9ELIbDMSNxNzsoVfsz+AnoSBVCE=,tag:rxMcPP3aYzEshiZNxG2bhw==,type:str]
+    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:UF8utsExdqyQ,iv:nPtHorvW7Pya/lmXZJw62X9Ybmak59EMJ9hr/45DOHY=,tag:dN41iKAg3ynePVREG80yGw==,type:str]
+    SECRET_GF_SMTP_HOST: ENC[AES256_GCM,data:uOSuWYGvCgEO039qboDThe64,iv:przLA7aLopfQBAwOeKWaZwr+RHuw0LoI/dWwhBAkf6E=,tag:AM1dlxOak468syFAk/j8fw==,type:str]
+    SECRET_GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:eudcczkUfv3Aiy1jMcxR9+s4Yg==,iv:bAGKnS8HoGRzpl+IQJG99lhrVXABuavwx1qmHorz2p4=,tag:lA4bmy+Is6AYnaG9gYbuMw==,type:str]
+    SECRET_GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:zTm0yoYJo/M=,iv:mVPK8M9I5s2GNoqiEO3gx9D7OJGoeW651mjkNAkIIS0=,tag:eHGCY6zxQ1F5iH3oC8IxLw==,type:str]
+    SECRET_GF_SMTP_USER: ENC[AES256_GCM,data:jE1DR5WonZnOCQPs19UIe0zXVg==,iv:5wz5ehlwzc+hzKQDq5otsCULhv5h4hwP9xRgB+XUiL8=,tag:gf0kGFrInduUuoDizscbOQ==,type:str]
+    SECRET_GF_SMTP_PASSWORD: ENC[AES256_GCM,data:FSeL8aeah89F,iv:aiDmUCrRPsM1fIvK52mVvoEtxIO9TaxbE3aCEWpX6EE=,tag:N4/QYWKrq0rYF46n+WjCSA==,type:str]
+    SECRET_MINIO_USERNAME: ENC[AES256_GCM,data:X/RBtSO2VkhPwg==,iv:VpAEH6bD4xC59UJrZc2pMP4cq1A4o3qYm08fu0kLAKY=,tag:D6EYh0bGI+6mhvBf+1W0Dg==,type:str]
+    SECRET_MINIO_PASSWORD: ENC[AES256_GCM,data:vV8UjI1Xr/mUXw==,iv:pZCJ+3RgGiV7M9vDQXrV46T5l20pkNC009zZe1GJTpI=,tag:TvtNkkHJpHk/YP9GozByAA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -41,14 +41,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvcUp5UEVuVHEzQlFFeG5P
-            STJhRE1sbEhJZmxINUR1emEzeEhac1hsWFhBCnVJbGNkb05jTkc0LzdtZkNwMkRK
-            MzUzRVp3ek5kMnB0YUdMN3VmakREaWMKLS0tIGhteFh4VkxlQjNnaEJ5dXRYOVhm
-            VkhqWC80NldJTElPM2xUeXAraFM4bzgKVkUbMOpu1zBznkwVzC5acX8mS9adB0kk
-            Totlv7/WCIhQYH096+Hs1FpqWI9POyit25plrzQWnHOwamoDJK0uUQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmWlBwYTNjdWt6TkpUK25p
+            L2ZGUGYwcXp6RE5ubDRrbDhmZUk2WlpxMmtRCmc1U0FzTm9HRTg4MzdnN2J4dkhh
+            aHlaLzh6MGUyVUozYUpRS2NOZGhmY1kKLS0tIGJzWlVvVm5oMFl0MGRadU9oajJC
+            RG1GbjlLMjBGNUUxVTJ2VXZ3WENDdHcKb995/F3NIxh8cvGi9lm2/+P7isfAawV1
+            3k1uX8jbve1jYEGIH/J9OPKpIJpIYxTDlAwv9c9C3V10jAgMsNGLKw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-05T21:22:54Z"
-    mac: ENC[AES256_GCM,data:kp10UzvPasdHjxKi5yJbbumfgeNEqcy+IGmrdcct4x4bmj1gs1KBd2o7uwNN/yShoYoE1kfncJtFJbjvMwXw1GwIPoDVCkxUrnKynWz09l85og8SyQZN1fXK28v1vneEAUq3GK+WHPA+ptTQA7alCp+weRAWZ9smtbHQYIVH1ls=,iv:QO0798sGMt2pLaUQA/llIXkDK9hMjwpDyLnwOR+kTrk=,tag:Q9LT7arx4iqKhSVl90DRyg==,type:str]
+    lastmodified: "2023-03-05T23:12:33Z"
+    mac: ENC[AES256_GCM,data:sjKVMbqjfFxO/ZEb0gctVaiCWlVS+2DTxbl8fnstXtK177+7xSxHRzMh7mZDe3aLLmUYPAf3hw0T/0w/66faNwIA4lZdgACo13OtI0nJAi3zkuyOHXo0+3bEpuegpo1pfl9Tm4YUJJDTnBoE37HKJCPQOEsw162pTYykcBzRBP4=,iv:o2ak5nVwCJMOSNokovYGqY9xQli/fV51bE/Wsj5d0vI=,tag:9SBkwQGdf+7aseUwDxPK1A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
