--- a/kubernetes/flux/vars/cluster-settings.yaml
+++ b/kubernetes/flux/vars/cluster-settings.yaml
@@ -18,3 +18,4 @@ data:
   PLEX_ADDR: "192.168.1.25"
   SVC_PLEX_ADDR: "192.168.1.94"
   SVC_POSTGRESS_ADDR: "192.168.1.97"
+  SVC_LOKI_ADDR: "192.168.1.93"
