--- a/tmpl/kubernetes/flux/cluster-settings.yaml
+++ b/tmpl/kubernetes/flux/cluster-settings.yaml
@@ -18,3 +18,4 @@ data:
   PLEX_ADDR: "${BOOTSTRAP_PLEX_ADDR}"
   SVC_PLEX_ADDR: "${BOOTSTRAP_SVC_PLEX_ADDR}"
   SVC_POSTGRESS_ADDR: "${BOOTSTRAP_POSTGRES_SVC_ADDR}"
+  SVC_LOKI_ADDR: "${BOOTSTRAP_SVC_LOKI_ADDR}"
