--- a/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
@@ -65,22 +65,22 @@ spec:
           ring:
             kvstore:
               store: memberlist
-        # ruler:
-        #   enable_api: true
-        #   enable_alertmanager_v2: true
-        #   alertmanager_url: http://alertmanager-operated:9093
-        #   storage:
-        #     type: local
-        #     local:
-        #       directory: /rules
-        #   rule_path: /tmp/scratch
-        #   ring:
-        #     kvstore:
-        #       store: memberlist
-        # distributor:
-        #   ring:
-        #     kvstore:
-        #       store: memberlist
+        ruler:
+          enable_api: true
+          # enable_alertmanager_v2: true
+          # alertmanager_url: http://alertmanager-operated:9093
+          storage:
+            type: local
+            local:
+              directory: /rules
+          rule_path: /tmp/scratch
+          ring:
+            kvstore:
+              store: memberlist
+        distributor:
+          ring:
+            kvstore:
+              store: memberlist
         compactor:
           working_directory: /var/loki/boltdb-shipper-compactor
           shared_store: s3
