--- a/kubernetes/apps/networking/cloudflare-ddns/ks.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/ks.yaml
@@ -6,6 +6,7 @@ metadata:
   namespace: flux-system
   labels:
     substitution.flux.home.arpa/enabled: "true"
+    goldilocks.fairwinds.com/enabled: "false"
 spec:
   path: ./kubernetes/apps/networking/cloudflare-ddns/app
   prune: true
