--- a/kubernetes/apps/monitoring/thanos/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/thanos/app/helmrelease.yaml
@@ -29,7 +29,7 @@ spec:
     objstoreConfig:
       type: s3
       config:
-        endpoint: minio.default.svc.cluster.local:9000
+        endpoint: minio.kube-system.svc.cluster.local:9000
         bucket: thanos
         insecure: true
     queryFrontend:
@@ -44,28 +44,39 @@ spec:
         sidecarsNamespace: monitoring
       ingress:
         enabled: true
-        ingressClassName: nginx
+        ingressClassName: "traefik"
         annotations:
-          hajimari.io/enable: "false"
-        hostname: &host thanos-query.devbu.io
-        tls: true
-        extraTls:
+          hajimari.io/enable: "true"
+          hajimari.io/icon: "chart-scatter-plot-hexbin"
+          external-dns.home.arpa/enabled: "true"
+          external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
+          external-dns.alpha.kubernetes.io/hostname: thanos.${SECRET_DOMAIN}
+          cert-manager.io/cluster-issuer: "letsencrypt-production"
+          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+          traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-default@kubernetescrd
+        hosts:
+          - "thanos.${SECRET_DOMAIN}"
+        tls:
           - hosts:
-              - *host
+              - "thanos.${SECRET_DOMAIN}"
+            secretName: "thanos.${SECRET_DOMAIN}"
     bucketweb:
       enabled: true
       replicaCount: 3
       podAntiAffinityPreset: hard
       ingress:
         enabled: true
-        ingressClassName: nginx
+        ingressClassName: traefik
         annotations:
           hajimari.io/enable: "false"
-        hostname: &host thanos-bucketweb.devbu.io
+          cert-manager.io/cluster-issuer: "letsencrypt-production"
+          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+          traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-default@kubernetescrd
+        hostname: "thanos-bucketweb.${SECRET_DOMAIN}"
         tls: true
         extraTls:
           - hosts:
-              - *host
+              - "thanos-bucketweb.${SECRET_DOMAIN}"
     compactor:
       enabled: true
       extraFlags: ["--compact.concurrency", "4"]
@@ -74,28 +85,28 @@ spec:
       retentionResolution1h: 30d
       ingress:
         enabled: true
-        ingressClassName: nginx
+        ingressClassName: traefik
         annotations:
           hajimari.io/enable: "false"
-        hostname: &host thanos-compactor.devbu.io
+        hostname: "thanos-compactor.${SECRET_DOMAIN}"
         tls: true
         extraTls:
           - hosts:
-              - *host
+              - "thanos-compactor.${SECRET_DOMAIN}"
       persistence:
         enabled: true
         storageClass: local-path
-        size: 20Gi
+        size: 5Gi
     storegateway:
       enabled: true
       replicaCount: 3
       podAntiAffinityPreset: hard
       ingress:
         enabled: true
-        ingressClassName: nginx
+        ingressClassName: traefik
         annotations:
           hajimari.io/enable: "false"
-        hostname: &host thanos-storegateway.devbu.io
+        hostname: &host thanos-storegateway.${SECRET_DOMAIN}
         tls: true
         extraTls:
           - hosts:
@@ -103,7 +114,7 @@ spec:
       persistence:
         enabled: true
         storageClass: local-path
-        size: 20Gi
+        size: 5Gi
     ruler:
       enabled: true
       replicaCount: 3
@@ -111,7 +122,7 @@ spec:
       dnsDiscovery:
         enabled: true
       alertmanagers: ["http://kube-prometheus-stack-alertmanager.monitoring:9093"]
-      clusterName: home-ops
+      clusterName: home-kubernetes
       extraFlags: ["--web.prefix-header=X-Forwarded-Prefix"]
       config: |-
         groups:
@@ -121,10 +132,10 @@ spec:
                 expr: absent(up{job="kube-prometheus-stack-prometheus"})
       ingress:
         enabled: true
-        ingressClassName: nginx
+        ingressClassName: traefik
         annotations:
           hajimari.io/enable: "false"
-        hostname: &host thanos-ruler.devbu.io
+        hostname: &host thanos-ruler.${SECRET_DOMAIN}
         tls: true
         extraTls:
           - hosts:
@@ -132,17 +143,8 @@ spec:
       persistence:
         enabled: true
         storageClass: local-path
-        size: 20Gi
+        size: 5Gi
     metrics:
       enabled: true
       serviceMonitor:
         enabled: true
-  valuesFrom:
-    - targetPath: objstoreConfig.config.access_key
-      kind: Secret
-      name: thanos-secret
-      valuesKey: AWS_ACCESS_KEY_ID
-    - targetPath: objstoreConfig.config.secret_key
-      kind: Secret
-      name: thanos-secret
-      valuesKey: AWS_SECRET_ACCESS_KEY
