--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -12,4 +12,4 @@ resources:
   - ./helm-dashboard/ks.yaml
   # - ./loki/ks.yaml
   # - ./vector/ks.yaml
-  - ./thanos/ks.yaml
+  # - ./thanos/ks.yaml
